@@ -1,7 +1,6 @@
 package nl.meg.jcr.store.internal;
 
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.Calendar;
 import java.util.List;
 import java.util.Optional;
@@ -19,12 +18,13 @@ import org.mockito.Mockito;
 
 import nl.meg.AbstractMockitoTest;
 import nl.meg.jcr.store.JcrProperty;
+import nl.meg.jcr.store.JcrPropertyFactory;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-class JcrPropertyFactoryImplTest extends AbstractMockitoTest {
+class JcrPropertyFactoryTest extends AbstractMockitoTest {
 
     @Mock
     private Node nodeMock;
@@ -40,17 +40,15 @@ class JcrPropertyFactoryImplTest extends AbstractMockitoTest {
     @Test
     void testGetNameAndToString() {
         final JcrProperty<Boolean> p = JcrPropertyFactory.ofBoolean("test");
-        assertThat(p.getName()).isEqualTo("test");
-        assertThat(p.toString()).isEqualTo("JcrProperty[name=test]");
+        assertThat(p.name()).isEqualTo("test");
+        assertThat(p).hasToString("JcrProperty[name=test]");
     }
 
     @Test
     void testBoolean() throws RepositoryException {
 
-        when(nodeMock.getProperty("test"))
-                .thenReturn(propertyMock);
-        when(propertyMock.getBoolean())
-                .thenReturn(false, true);
+        when(nodeMock.getProperty("test")).thenReturn(propertyMock);
+        when(propertyMock.getBoolean()).thenReturn(false, true);
 
         final JcrProperty<Boolean> p = JcrPropertyFactory.ofBoolean("test");
         assertThat(p.getValue(nodeMock)).isFalse();
@@ -63,36 +61,31 @@ class JcrPropertyFactoryImplTest extends AbstractMockitoTest {
     @Test
     void testBooleanList() throws RepositoryException {
 
-        when(nodeMock.getProperty("test"))
-                .thenReturn(propertyMock);
-        when(propertyMock.getValues())
-                .thenReturn(new Value[]{valueMock}, new Value[]{valueMock, valueMock});
+        when(nodeMock.getProperty("test")).thenReturn(propertyMock);
+        when(propertyMock.getValues()).thenReturn(new Value[]{valueMock}, new Value[]{valueMock, valueMock});
         when(valueMock.getBoolean()).thenReturn(true, false, true);
 
         final JcrProperty<List<Boolean>> p = JcrPropertyFactory.ofBooleanList("test");
-        assertThat(p.getValue(nodeMock)).isEqualTo(Arrays.asList(true));
-        assertThat(p.getValue(nodeMock)).isEqualTo(Arrays.asList(false, true));
+        assertThat(p.getValue(nodeMock)).isEqualTo(List.of(true));
+        assertThat(p.getValue(nodeMock)).isEqualTo(List.of(false, true));
 
         when(nodeMock.getSession()).thenReturn(sessionMock);
         when(sessionMock.getValueFactory()).thenReturn(valueFactoryMock);
         doReturn(valueMock).when(valueFactoryMock).createValue(true);
         doReturn(valueMock).when(valueFactoryMock).createValue(false);
 
-        p.setValue(nodeMock, Arrays.asList(true, false));
+        p.setValue(nodeMock, List.of(true, false));
     }
 
     @Test
     void testBooleanOption() throws RepositoryException {
 
-        when(nodeMock.hasProperty("test"))
-                .thenReturn(false, true);
-        when(nodeMock.getProperty("test"))
-                .thenReturn(propertyMock);
-        when(propertyMock.getBoolean())
-                .thenReturn(false, true);
+        when(nodeMock.hasProperty("test")).thenReturn(false, true);
+        when(nodeMock.getProperty("test")).thenReturn(propertyMock);
+        when(propertyMock.getBoolean()).thenReturn(false, true);
 
         final JcrProperty<Optional<Boolean>> p = JcrPropertyFactory.ofBooleanOption("test");
-        assertThat(p.getValue(nodeMock)).isEqualTo(Optional.empty());
+        assertThat(p.getValue(nodeMock)).isNotPresent();
         assertThat(p.getValue(nodeMock).orElse(true)).isFalse();
         assertThat(p.getValue(nodeMock).orElse(false)).isTrue();
 
@@ -103,18 +96,15 @@ class JcrPropertyFactoryImplTest extends AbstractMockitoTest {
     @Test
     void testBooleanListOption() throws RepositoryException {
 
-        when(nodeMock.hasProperty("test"))
-                .thenReturn(false, true);
-        when(nodeMock.getProperty("test"))
-                .thenReturn(propertyMock);
-        when(propertyMock.getValues())
-                .thenReturn(new Value[]{valueMock}, new Value[]{valueMock, valueMock});
+        when(nodeMock.hasProperty("test")).thenReturn(false, true);
+        when(nodeMock.getProperty("test")).thenReturn(propertyMock);
+        when(propertyMock.getValues()).thenReturn(new Value[]{valueMock}, new Value[]{valueMock, valueMock});
         when(valueMock.getBoolean()).thenReturn(true, false, true);
 
         final JcrProperty<Optional<List<Boolean>>> p = JcrPropertyFactory.ofBooleanListOption("test");
-        assertThat(p.getValue(nodeMock)).isEqualTo(Optional.empty());
-        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(Arrays.asList(true));
-        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(Arrays.asList(false, true));
+        assertThat(p.getValue(nodeMock)).isNotPresent();
+        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(List.of(true));
+        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(List.of(false, true));
 
         p.setValue(nodeMock, Optional.empty());
         verify(propertyMock).remove();
@@ -123,13 +113,11 @@ class JcrPropertyFactoryImplTest extends AbstractMockitoTest {
     @Test
     void testLong() throws RepositoryException {
 
-        when(nodeMock.getProperty("test"))
-                .thenReturn(propertyMock);
-        when(propertyMock.getLong())
-                .thenReturn(0L, 1L);
+        when(nodeMock.getProperty("test")).thenReturn(propertyMock);
+        when(propertyMock.getLong()).thenReturn(0L, 1L);
 
         final JcrProperty<Long> p = JcrPropertyFactory.ofLong("test");
-        assertThat(p.getValue(nodeMock)).isEqualTo(0L);
+        assertThat(p.getValue(nodeMock)).isZero();
         assertThat(p.getValue(nodeMock)).isEqualTo(1L);
 
         p.setValue(nodeMock, 10L);
@@ -139,22 +127,20 @@ class JcrPropertyFactoryImplTest extends AbstractMockitoTest {
     @Test
     void testLongList() throws RepositoryException {
 
-        when(nodeMock.getProperty("test"))
-                .thenReturn(propertyMock);
-        when(propertyMock.getValues())
-                .thenReturn(new Value[]{valueMock}, new Value[]{valueMock, valueMock});
+        when(nodeMock.getProperty("test")).thenReturn(propertyMock);
+        when(propertyMock.getValues()).thenReturn(new Value[]{valueMock}, new Value[]{valueMock, valueMock});
         when(valueMock.getLong()).thenReturn(0L, 1L, 2L);
 
         final JcrProperty<List<Long>> p = JcrPropertyFactory.ofLongList("test");
-        assertThat(p.getValue(nodeMock)).isEqualTo(Arrays.asList(0L));
-        assertThat(p.getValue(nodeMock)).isEqualTo(Arrays.asList(1L, 2L));
+        assertThat(p.getValue(nodeMock)).isEqualTo(List.of(0L));
+        assertThat(p.getValue(nodeMock)).isEqualTo(List.of(1L, 2L));
 
         when(nodeMock.getSession()).thenReturn(sessionMock);
         when(sessionMock.getValueFactory()).thenReturn(valueFactoryMock);
 
         doReturn(valueMock).when(valueFactoryMock).createValue(10L);
         doReturn(valueMock).when(valueFactoryMock).createValue(20L);
-        p.setValue(nodeMock, Arrays.asList(10L, 20L));
+        p.setValue(nodeMock, List.of(10L, 20L));
 
         verify(nodeMock).setProperty(Mockito.eq("test"), Mockito.<Value[]>any());
     }
@@ -162,44 +148,35 @@ class JcrPropertyFactoryImplTest extends AbstractMockitoTest {
     @Test
     void testLongOption() throws RepositoryException {
 
-        when(nodeMock.hasProperty("test"))
-                .thenReturn(false, true);
-        when(nodeMock.getProperty("test"))
-                .thenReturn(propertyMock);
-        when(propertyMock.getLong())
-                .thenReturn(0L, 1L);
+        when(nodeMock.hasProperty("test")).thenReturn(false, true);
+        when(nodeMock.getProperty("test")).thenReturn(propertyMock);
+        when(propertyMock.getLong()).thenReturn(0L, 1L);
 
         final JcrProperty<Optional<Long>> p = JcrPropertyFactory.ofLongOption("test");
-        assertThat(p.getValue(nodeMock)).isEqualTo(Optional.empty());
-        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(0L);
+        assertThat(p.getValue(nodeMock)).isNotPresent();
+        assertThat(p.getValue(nodeMock).orElse(null)).isZero();
         assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(1L);
     }
 
     @Test
     void testLongListOption() throws RepositoryException {
 
-        when(nodeMock.hasProperty("test"))
-                .thenReturn(false, true);
-        when(nodeMock.getProperty("test"))
-                .thenReturn(propertyMock);
-        when(propertyMock.getValues())
-                .thenReturn(new Value[]{valueMock}, new Value[]{valueMock, valueMock});
-        when(valueMock.getLong())
-                .thenReturn(0L, 1L, 2L);
+        when(nodeMock.hasProperty("test")).thenReturn(false, true);
+        when(nodeMock.getProperty("test")).thenReturn(propertyMock);
+        when(propertyMock.getValues()).thenReturn(new Value[]{valueMock}, new Value[]{valueMock, valueMock});
+        when(valueMock.getLong()).thenReturn(0L, 1L, 2L);
 
         final JcrProperty<Optional<List<Long>>> p = JcrPropertyFactory.ofLongListOption("test");
-        assertThat(p.getValue(nodeMock)).isEqualTo(Optional.empty());
-        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(Arrays.asList(0L));
-        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(Arrays.asList(1L, 2L));
+        assertThat(p.getValue(nodeMock)).isNotPresent();
+        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(List.of(0L));
+        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(List.of(1L, 2L));
     }
 
     @Test
     void testString() throws RepositoryException {
 
-        when(nodeMock.getProperty("test"))
-                .thenReturn(propertyMock);
-        when(propertyMock.getString())
-                .thenReturn("x", "y");
+        when(nodeMock.getProperty("test")).thenReturn(propertyMock);
+        when(propertyMock.getString()).thenReturn("x", "y");
 
         final JcrProperty<String> p = JcrPropertyFactory.ofString("test");
         assertThat(p.getValue(nodeMock)).isEqualTo("x");
@@ -212,22 +189,20 @@ class JcrPropertyFactoryImplTest extends AbstractMockitoTest {
     @Test
     void testStringList() throws RepositoryException {
 
-        when(nodeMock.getProperty("test"))
-                .thenReturn(propertyMock);
-        when(propertyMock.getValues())
-                .thenReturn(new Value[]{valueMock}, new Value[]{valueMock, valueMock});
+        when(nodeMock.getProperty("test")).thenReturn(propertyMock);
+        when(propertyMock.getValues()).thenReturn(new Value[]{valueMock}, new Value[]{valueMock, valueMock});
         when(valueMock.getString()).thenReturn("x", "y", "z");
 
         final JcrProperty<List<String>> p = JcrPropertyFactory.ofStringList("test");
-        assertThat(p.getValue(nodeMock)).isEqualTo(Arrays.asList("x"));
-        assertThat(p.getValue(nodeMock)).isEqualTo(Arrays.asList("y", "z"));
+        assertThat(p.getValue(nodeMock)).isEqualTo(List.of("x"));
+        assertThat(p.getValue(nodeMock)).isEqualTo(List.of("y", "z"));
 
         when(nodeMock.getSession()).thenReturn(sessionMock);
         when(sessionMock.getValueFactory()).thenReturn(valueFactoryMock);
         doReturn(valueMock).when(valueFactoryMock).createValue("x");
         doReturn(valueMock).when(valueFactoryMock).createValue("y");
 
-        p.setValue(nodeMock, Arrays.asList("x", "y"));
+        p.setValue(nodeMock, List.of("x", "y"));
 
         verify(nodeMock).setProperty(Mockito.eq("test"), Mockito.<Value[]>any());
     }
@@ -235,15 +210,12 @@ class JcrPropertyFactoryImplTest extends AbstractMockitoTest {
     @Test
     void testStringOption() throws RepositoryException {
 
-        when(nodeMock.hasProperty("test"))
-                .thenReturn(false, true);
-        when(nodeMock.getProperty("test"))
-                .thenReturn(propertyMock);
-        when(propertyMock.getString())
-                .thenReturn("x", "y");
+        when(nodeMock.hasProperty("test")).thenReturn(false, true);
+        when(nodeMock.getProperty("test")).thenReturn(propertyMock);
+        when(propertyMock.getString()).thenReturn("x", "y");
 
         final JcrProperty<Optional<String>> p = JcrPropertyFactory.ofStringOption("test");
-        assertThat(p.getValue(nodeMock)).isEqualTo(Optional.empty());
+        assertThat(p.getValue(nodeMock)).isNotPresent();
         assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo("x");
         assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo("y");
     }
@@ -251,25 +223,21 @@ class JcrPropertyFactoryImplTest extends AbstractMockitoTest {
     @Test
     void testStringListOption() throws RepositoryException {
 
-        when(nodeMock.hasProperty("test"))
-                .thenReturn(false, true);
-        when(nodeMock.getProperty("test"))
-                .thenReturn(propertyMock);
-        when(propertyMock.getValues())
-                .thenReturn(new Value[]{valueMock}, new Value[]{valueMock, valueMock});
-        when(valueMock.getString())
-                .thenReturn("x", "y", "z");
+        when(nodeMock.hasProperty("test")).thenReturn(false, true);
+        when(nodeMock.getProperty("test")).thenReturn(propertyMock);
+        when(propertyMock.getValues()).thenReturn(new Value[]{valueMock}, new Value[]{valueMock, valueMock});
+        when(valueMock.getString()).thenReturn("x", "y", "z");
 
         final JcrProperty<Optional<List<String>>> p = JcrPropertyFactory.ofStringListOption("test");
-        assertThat(p.getValue(nodeMock)).isEqualTo(Optional.empty());
-        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(Arrays.asList("x"));
-        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(Arrays.asList("y", "z"));
+        assertThat(p.getValue(nodeMock)).isNotPresent();
+        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(List.of("x"));
+        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(List.of("y", "z"));
 
         when(nodeMock.getSession()).thenReturn(sessionMock);
         when(sessionMock.getValueFactory()).thenReturn(valueFactoryMock);
         doReturn(valueMock).when(valueFactoryMock).createValue("x");
         doReturn(valueMock).when(valueFactoryMock).createValue("y");
-        p.setValue(nodeMock, Optional.of(Arrays.asList("x", "y")));
+        p.setValue(nodeMock, Optional.of(List.of("x", "y")));
 
         verify(nodeMock).setProperty(Mockito.eq("test"), Mockito.<Value[]>any());
     }
@@ -281,14 +249,14 @@ class JcrPropertyFactoryImplTest extends AbstractMockitoTest {
         c1.setTimeInMillis(0);
         final Calendar c2 = Calendar.getInstance();
         c2.setTimeInMillis(1000);
-        when(nodeMock.getProperty("test"))
-                .thenReturn(propertyMock);
-        when(propertyMock.getDate())
-                .thenReturn(c1, c2);
+        when(nodeMock.getProperty("test")).thenReturn(propertyMock);
+        when(propertyMock.getDate()).thenReturn(c1, c2);
 
         final JcrProperty<Instant> p = JcrPropertyFactory.ofInstant("test");
         assertThat(p.getValue(nodeMock)).isEqualTo(c1.toInstant());
         assertThat(p.getValue(nodeMock)).isEqualTo(c2.toInstant());
+
+        p.setValue(nodeMock, Instant.EPOCH);
     }
 
     @Test
@@ -298,21 +266,19 @@ class JcrPropertyFactoryImplTest extends AbstractMockitoTest {
         c1.setTimeInMillis(0);
         final Calendar c2 = Calendar.getInstance();
         c2.setTimeInMillis(1000);
-        when(nodeMock.getProperty("test"))
-                .thenReturn(propertyMock);
-        when(propertyMock.getValues())
-                .thenReturn(new Value[]{valueMock}, new Value[]{valueMock, valueMock});
+        when(nodeMock.getProperty("test")).thenReturn(propertyMock);
+        when(propertyMock.getValues()).thenReturn(new Value[]{valueMock}, new Value[]{valueMock, valueMock});
         when(valueMock.getDate()).thenReturn(c1, c2, c1);
 
         final JcrProperty<List<Instant>> p = JcrPropertyFactory.ofInstantList("test");
-        assertThat(p.getValue(nodeMock)).isEqualTo(Arrays.asList(c1.toInstant()));
-        assertThat(p.getValue(nodeMock)).isEqualTo(Arrays.asList(c2.toInstant(), c1.toInstant()));
+        assertThat(p.getValue(nodeMock)).isEqualTo(List.of(c1.toInstant()));
+        assertThat(p.getValue(nodeMock)).isEqualTo(List.of(c2.toInstant(), c1.toInstant()));
 
         when(nodeMock.getSession()).thenReturn(sessionMock);
         when(sessionMock.getValueFactory()).thenReturn(valueFactoryMock);
         doReturn(valueMock).when(valueFactoryMock).createValue(c1);
         doReturn(valueMock).when(valueFactoryMock).createValue(c2);
-        p.setValue(nodeMock, Arrays.asList(c1.toInstant(), c2.toInstant()));
+        p.setValue(nodeMock, List.of(c1.toInstant(), c2.toInstant()));
 
         verify(nodeMock).setProperty(Mockito.eq("test"), Mockito.<Value[]>any());
     }
@@ -324,15 +290,12 @@ class JcrPropertyFactoryImplTest extends AbstractMockitoTest {
         c1.setTimeInMillis(0);
         final Calendar c2 = Calendar.getInstance();
         c2.setTimeInMillis(1000);
-        when(nodeMock.hasProperty("test"))
-                .thenReturn(false, true);
-        when(nodeMock.getProperty("test"))
-                .thenReturn(propertyMock);
-        when(propertyMock.getDate())
-                .thenReturn(c1, c2);
+        when(nodeMock.hasProperty("test")).thenReturn(false, true);
+        when(nodeMock.getProperty("test")).thenReturn(propertyMock);
+        when(propertyMock.getDate()).thenReturn(c1, c2);
 
         final JcrProperty<Optional<Instant>> p = JcrPropertyFactory.ofInstantOption("test");
-        assertThat(p.getValue(nodeMock)).isEqualTo(Optional.empty());
+        assertThat(p.getValue(nodeMock)).isNotPresent();
         assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(c1.toInstant());
         assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(c2.toInstant());
     }
@@ -344,19 +307,15 @@ class JcrPropertyFactoryImplTest extends AbstractMockitoTest {
         c1.setTimeInMillis(0);
         final Calendar c2 = Calendar.getInstance();
         c2.setTimeInMillis(1000);
-        when(nodeMock.hasProperty("test"))
-                .thenReturn(false, true);
-        when(nodeMock.getProperty("test"))
-                .thenReturn(propertyMock);
-        when(propertyMock.getValues())
-                .thenReturn(new Value[]{valueMock}, new Value[]{valueMock, valueMock});
-        when(valueMock.getDate())
-                .thenReturn(c1, c2, c1);
+        when(nodeMock.hasProperty("test")).thenReturn(false, true);
+        when(nodeMock.getProperty("test")).thenReturn(propertyMock);
+        when(propertyMock.getValues()).thenReturn(new Value[]{valueMock}, new Value[]{valueMock, valueMock});
+        when(valueMock.getDate()).thenReturn(c1, c2, c1);
 
         final JcrProperty<Optional<List<Instant>>> p = JcrPropertyFactory.ofInstantListOption("test");
-        assertThat(p.getValue(nodeMock)).isEqualTo(Optional.empty());
-        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(Arrays.asList(c1.toInstant()));
-        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(Arrays.asList(c2.toInstant(), c1.toInstant()));
+        assertThat(p.getValue(nodeMock)).isNotPresent();
+        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(List.of(c1.toInstant()));
+        assertThat(p.getValue(nodeMock).orElse(null)).isEqualTo(List.of(c2.toInstant(), c1.toInstant()));
     }
 
 }
